# lgdxrobot2-ros2

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.amd64  Dockerfile.amd64desktop  Dockerfile.amd64sup  Dockerfile.amd64supdesktop  Dockerfile.arm64  Dockerfile.arm64desktop  Dockerfile.arm64sup  Dockerfile.arm64supdesktop  Dockerfile.arm64supwebots  Dockerfile.test  LICENSE  README.md  ros_entrypoint.sh
lgdxrobot2/: CMakeLists.txt  package.xml
lgdxrobot2-description/: CMakeLists.txt  (+1 more)
lgdxrobot2_agent/: CMakeLists.txt  package.xml
lgdxrobot2_agent/include/lgdxrobot2_agent/: Agent.hpp  Cloud.hpp  CloudExchangeStream.hpp  CloudSignals.hpp  Map.hpp  Mcu.hpp  McuSignals.hpp  Navigation.hpp  RobotController.hpp  RobotStatus.hpp  SensorSignals.hpp  Sensors.hpp  SlamController.hpp  SlamExchangeStream.hpp  agent.hpp  lgdxrobot2.h  mcu.hpp  mcu_signals.hpp  sensor_signals.hpp  sensors.hpp
lgdxrobot2_agent/launch/: joy.launch.py
lgdxrobot2_agent/msg/: AutoTask.msg  RobotData.msg
lgdxrobot2_agent/proto/: RobotClientsService.proto
lgdxrobot2_agent/src/: Agent.cpp  Cloud.cpp  CloudExchangeStream.cpp  Map.cpp  Mcu.cpp  Navigation.cpp  RobotController.cpp  RobotStatus.cpp  Sensors.cpp  SlamController.cpp  SlamExchangeStream.cpp  agent.cpp  main.cpp  mcu.cpp  sensors.cpp
lgdxrobot2_agent/srv/: AutoTaskAbort.srv
lgdxrobot2_bringup/: CMakeLists.txt  package.xml
lgdxrobot2_bringup/launch/: bringup.launch.py  bringup_launch.py  explore.launch.py  gz_nav.launch.py  gz_nav_launch.py  nav.launch.py  nav2_rtabmap.launch.py  nav_launch.py  nav_rtabmap.launch.py  sim_display.launch.py  sim_nav.launch.py  simulation_fleet_base_launch.py  simulation_fleet_launch.py  simulation_multi_robots_base.launch.py  simulation_multi_robots_base.py  simulation_nav.launch.py  simulation_robot.launch.py  simulation_two_robot.launch.py  simulation_two_robots.launch.py  simulation_two_robots.py  webots_nav.launch.py  webots_nav_launch.py
lgdxrobot2_bringup/lgdxrobot2_bringup/: utils.py
lgdxrobot2_bringup/param/: ekf.yaml  imu_filter_madgwick.yaml  imu_transformer.yaml  lgdxrobot2_agent_node.yaml  lgdxrobot2_daemon_node.yaml  realsense2_camera.yaml  rtabmap.yaml
lgdxrobot2_bringup/param/loc/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/loc-gc/: nav2.yaml
lgdxrobot2_bringup/param/loc-gz/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/loc-jetson-nano/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/loc-mppi/: nav2.yaml
lgdxrobot2_bringup/param/loc-pi4/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/loc-rpp/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/loc-sim/: ekf.yaml
lgdxrobot2_bringup/param/loc-wb/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/nav-rtabmap/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/robot1/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/robot2/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/rtabmap/: nav2.yaml
lgdxrobot2_bringup/param/sim-loc/: lattice.json  nav2.yaml
lgdxrobot2_bringup/param/sim-slam/: ekf.yaml  explore_node.yaml  nav2.yaml
lgdxrobot2_bringup/param/sim-slam-mynamespace/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/slam-gz/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/slam-jetson-nano/: ekf.yaml
lgdxrobot2_bringup/param/slam-jetson-nano-no-cam/: ekf.yaml
lgdxrobot2_bringup/param/slam-no-cam/: ekf.yaml
lgdxrobot2_bringup/param/slam-pi-no-cam/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/slam-pi4/: ekf.yaml
lgdxrobot2_bringup/param/slam-sim/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/param/slam-wb/: ekf.yaml  nav2.yaml
lgdxrobot2_bringup/rviz/: loc.rviz  nav.rviz  sim-loc.rviz  slam.rviz
lgdxrobot2_daemon/: CMakeLists.txt  package.xml
lgdxrobot2_daemon/launch/: daemon.launch.py  joy.launch.py
lgdxrobot2_daemon/msg/: AutoTask.msg
lgdxrobot2_daemon/proto/: RobotClientService.proto  RobotClientsService.proto
lgdxrobot2_daemon/src/: CloudAdapter.cpp  DaemonNode.cpp  Navigation.cpp  RealtimeExchange.cpp  RobotStatus.cpp  SerialPort.cpp  main.cpp
lgdxrobot2_daemon/srv/: CompleteTaskProgress.srv
lgdxrobot2_description/: CMakeLists.txt  package.xml
lgdxrobot2_description/description/: lgdxrobot2.urdf  lgdxrobot2_description.urdf  lgdxrobot2_sim.urdf
lgdxrobot2_description/launch/: display.launch.py  display_launch.py
lgdxrobot2_description/rviz/: display.rviz
lgdxrobot2_mcu/: CMakeLists.txt  package.xml
lgdxrobot2_mcu/launch/: joy.launch.py  mcu.launch.py
lgdxrobot2_mcu/src/: McuNode.cpp  SerialPort.cpp  main.cpp  mcu_node.cpp
lgdxrobot2_msgs/: CMakeLists.txt  package.xml
lgdxrobot2_msgs/msg/: System.msg
lgdxrobot2_navigation/: CMakeLists.txt  package.xml
lgdxrobot2_navigation/launch/: bringup_launch.py  keepout_zone_launch.py  localization_launch.py  nav.launch.py  nav2.launch.py  nav2_base.launch.py  nav2_rtabmap.launch.py  nav2_rtabmap_lgdxodom.launch.py  navigation_launch.py  simulation_multi_robots_base.launch.py  simulation_nav.launch.py  simulation_two_robots.launch.py  slam_launch.py  speed_zone_launch.py
lgdxrobot2_navigation/lgdxrobot2_navigation/: utils.py
lgdxrobot2_navigation/param/: depthimage_to_laserscan.yaml  ekf.yaml  ekf_rtabmap.yaml  imu_filter_madgwick.yaml  lgdxrobot2_mcu_node.yaml  nav2.yaml  nav2_params.yaml  nav2_rtabmap_params.yaml  realsense2_camera.yaml  rtabmap.yaml
lgdxrobot2_navigation/rviz/: default.rviz  slam.rviz
lgdxrobot2_webots/: CMakeLists.txt  lgdxrobot2_driver.xml  package.xml
lgdxrobot2_webots/launch/: nav2.launch.py  robot.launch.py
lgdxrobot2_webots/maps/: apartment.pgm  default.pgm  default.yaml  default_2r.pgm  two_robots.yaml
lgdxrobot2_webots/protos/: LGDXRobot2.proto  lgdxrobot2.wbt
lgdxrobot2_webots/resource/: lgdxrobot2.urdf
lgdxrobot2_webots/src/: LgdxRobot2Driver.cpp
lgdxrobot2_webots/worlds/: apartment.wbt  apartment_2r.wbt  default.wbt  default_2r.wbt  test.wbt  two_robots.wbt  world.wbt
lgdxrobot2sim_gz/: CMakeLists.txt  package.xml
lgdxrobot2sim_gz/maps/: depot.pgm  depot.yaml  maze.pgm  maze.yaml  warehouse.pgm  warehouse.yaml
lgdxrobot2sim_gz/worlds/: depot.sdf  maze.sdf  warehouse.sdf
(+134 files in other folders)
