<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgdxrobot2_agent</name>
  <version>0.0.0</version>
  <description>LGDXRobot2 agent.</description>
  <maintainer email="dev@bristolgram.uk">LGDXRobot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>libboost-all</buildtool_depend>
  <buildtool_depend>libgrpc++</buildtool_depend>
  <buildtool_depend>libprotobuf</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>nav2_msgs</buildtool_depend>
  <buildtool_depend>nav2_util</buildtool_depend>
  <buildtool_depend>protobuf-compiler-grpc</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>tf2_geometry_msgs</buildtool_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>libboost-all</exec_depend>
  <exec_depend>libgrpc++</exec_depend>
  <exec_depend>libprotobuf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>protobuf-compiler-grpc</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_generators</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
